--- a/client/site_users.jade
+++ b/client/site_users.jade
@@ -11,18 +11,18 @@ template(name='site_users')
                     // .ui.label #{tag_background_color}: tag_background_color
                     // .ui.label #{tag_foreground_color}: tag_foreground_color
                     // .ui.label #{link_color}: link_color
-                    .ui.header related sites
-                    .ui.header !{name}
-                    each related_sites
-                        .ui.small.header 
-                            i.fork.icon
-                            |#{name}
-                        .ui.list 
-                            .item relation: #{relation}
-                            .item api_site_parameter: #{api_site_parameter}
-                            .item site_url: #{site_url}
-                    a(href="https://www.twitter.com/#{twitter_account}" target='_window' title=twitter_account)
-                        i.large.link.twitter.icon
+                    // .ui.header related sites
+                    // .ui.header !{name}
+                    // each related_sites
+                    //     .ui.small.header 
+                    //         i.fork.icon
+                    //         |#{name}
+                    //     .ui.list 
+                    //         .item relation: #{relation}
+                    //         .item api_site_parameter: #{api_site_parameter}
+                    //         .item site_url: #{site_url}
+                    // a(href="https://www.twitter.com/#{twitter_account}" target='_window' title=twitter_account)
+                    //     i.large.link.twitter.icon
                     a.ui.large.basic.icon.circular.button(href=site_url)
                         // |#{site_url}
                         i.external.icon
