--- a/client/dao.jade
+++ b/client/dao.jade
@@ -190,7 +190,7 @@ template(name='unselect_tag')
 
 template(name='tag_selector')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.zoomer.tertiary.button.say_this.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.zoomer.tertiary.button.say.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.avatar.image.zoomer(src=term.watson.metadata.image)    
@@ -249,23 +249,22 @@ template(name='tone')
         each tone.result.sentences_tone
             .item(class=sentence_class)
                 //- span #{sentence_id}
-                span.tone_item.ui.zoomer.pointer.text(title="#{sentence_id}" class="#{tone_size} #{sentence_color}") 
+                span.tone_item.ui.text.say(title="#{sentence_id}" class="#{tone_size} #{sentence_color}") 
                     |{{lowered text}}
                     span.content
                         // .inline.header(title="#{sentence_id}") {{lowered text}}
                         |#{weight}
-                        i.chevron.up.link.grey.large.icon.upvote_sentence
-                        i.chevron.down.link.grey.large.icon.downvote_sentence
+                        // i.chevron.up.link.grey.large.icon.upvote_sentence
+                        // i.chevron.down.link.grey.large.icon.downvote_sentence
                         each tones
-                            .ui.inverted.small.compact.label(class="#{tone_label_class}") 
-                            .ui.small.compact.inverted.label(class="{{calculated_size 'weight'}} #{tone_label_class}") 
+                            .ui.small.basic.label(class="{{calculated_size 'weight'}} #{tone_label_class}") 
                                 span.ui.text
                                     |#{tone_id} &nbsp;
                                 | {{ to_percent score }}% 
-                        .ui.mini.transparent.icon.input
-                            input.tag_sentence(type='text' placeholder='tag')
-                        each tags 
-                            .ui.label #{this}
+                        // .ui.mini.transparent.icon.input
+                        //     input.tag_sentence(type='text' placeholder='tag')
+                        // each tags 
+                        //     .ui.label #{this}
     // unless tone                
     //- #call_tone.ui.icon.button
     //-     i.refresh.icon
