--- a/client/reddit.jade
+++ b/client/reddit.jade
@@ -20,14 +20,14 @@ template(name='reddit')
                         .ui.item  
                             a.ui.tiny.image.goto_sub(href="/subreddit/#{data.display_name}")
                                 img.ui.rounded.zoomer.image(src=data.icon_img)
-                            .content.say_this
+                            .content.say
                                 a.ui.header.goto_sub(href="/subreddit/#{data.display_name}")
                                     | !{data.display_name}
                                 a.ui.small.grey.header.goto_sub(href="/subreddit/#{data.display_name}")
                                     | !{data.header_title}
                                 // span.description !{data.public_description_html}
                                 span.description !{data.public_description}
-                                span.say_this
+                                span.say
                                     i.money.icon
                                     |#{data.advertiser_category}
                                 if in_dev
