--- a/client/suser.jade
+++ b/client/suser.jade
@@ -20,10 +20,10 @@ template(name='suser_layout')
                     a.ui.basic.icon.circular.large.button.say_users(href="/site/#{site}/users")
                         i.users.large.icon
                         // |users
-                    .ui.inline.header.say_this   
+                    .ui.inline.header.say   
                         |#{site}
                     .spacer
-                    a.ui.big.inline.header.say_this(class=post_header_class href="/site/#{site}/user/#{user_id}")
+                    a.ui.big.inline.header.say(class=post_header_class href="/site/#{site}/user/#{user_id}")
                         |!{display_name} 
                         small(title='reputation') #{reputation}
                         strong(title="#{site} rank") ##{site_rank} 
@@ -31,7 +31,7 @@ template(name='suser_layout')
                     div
                     // with location
                     //     +flat_tag_selector
-                    .ui.inline.tertiary.button.set_location.zoomer.say_this
+                    .ui.inline.tertiary.button.set_location.zoomer.say
                         |!{location}
                     a(href="/site/#{site}/user/#{user_id}")
                         img.ui.rounded.inline.image.pointer.zoomer.boop(src=profile_image)
@@ -39,31 +39,31 @@ template(name='suser_layout')
                         i.stack.exchange.icon
                         i.external.icon
                     .ui.vertical.fluid.stackable.small.menu
-                        a.item.say_this(href="/site/#{site}/user/#{user_id}/questions" class="{{isActiveRoute regex='suser_questions'}}")
+                        a.item.say(href="/site/#{site}/user/#{user_id}/questions" class="{{isActiveRoute regex='suser_questions'}}")
                             i.question.grey.icon
                             |#{question_count} questions
-                        a.item.say_this(href="/site/#{site}/user/#{user_id}/answers" class="{{isActiveRoute regex='suser_answers'}}")
+                        a.item.say(href="/site/#{site}/user/#{user_id}/answers" class="{{isActiveRoute regex='suser_answers'}}")
                             i.reply.grey.icon
                             |#{answer_count} answers
-                        a.item.say_this(href="/site/#{site}/user/#{user_id}/comments" class="{{isActiveRoute regex='suser_comments'}}")
+                        a.item.say(href="/site/#{site}/user/#{user_id}/comments" class="{{isActiveRoute regex='suser_comments'}}")
                             i.chat.outline.grey.icon
                             |#{comment_count} comments
-                        a.item.say_this(href="/site/#{site}/user/#{user_id}/tags" class="{{isActiveRoute regex='suser_tags'}}")
+                        a.item.say(href="/site/#{site}/user/#{user_id}/tags" class="{{isActiveRoute regex='suser_tags'}}")
                             i.tag.grey.icon
                             |tags
-                        a.item.say_this(href="/site/#{site}/user/#{user_id}/badges" class="{{isActiveRoute regex='suser_badges'}}")
+                        a.item.say(href="/site/#{site}/user/#{user_id}/badges" class="{{isActiveRoute regex='suser_badges'}}")
                             i.certificate.grey.icon
                             |badges
                     +print_this
                     .ui.list
-                        .item.say_this account id #{account_id}
-                        .item.say_this user id #{user_id}
-                        .item.say_this employee #{is_employee}
-                        .item.say_this modified {{ufrom last_modified_date}}
-                        .item.say_this accessed  {{ufrom last_access_date}}
-                        .item.say_this created {{ufrom creation_date}}
-                        .item.say_this #{user_type}
-                        .item.say_this accepts #{accept_rate}%                        
+                        .item.say account id #{account_id}
+                        .item.say user id #{user_id}
+                        .item.say employee #{is_employee}
+                        .item.say modified {{ufrom last_modified_date}}
+                        .item.say accessed  {{ufrom last_access_date}}
+                        .item.say created {{ufrom creation_date}}
+                        .item.say #{user_type}
+                        .item.say accepts #{accept_rate}%                        
                         // .item badge_counts: #{badge_counts}
                         // .item profile_image: #{profile_image}
                         a.item(href=link target='_window') 
@@ -71,25 +71,25 @@ template(name='suser_layout')
                             |SE link
                         .item 
                             strong rep change
-                        .item.say_this
+                        .item.say
                             |#{reputation_change_day} day
-                        .item.say_this
+                        .item.say
                             |#{reputation_change_week} week
-                        .item.say_this
+                        .item.say
                             |#{reputation_change_month} month
-                        .item.say_this
+                        .item.say
                             |#{reputation_change_quarter} quarter
-                        .item.say_this
+                        .item.say
                             |#{reputation_change_year} year
-                        .item.say_this
+                        .item.say
                             |#{down_vote_count}
                             i.thumbs.down.outline.icon
                             |down votes
-                        .item.say_this
+                        .item.say
                             i.thumbs.up.outline.icon
                             | #{up_vote_count}
                             |up votes
-                        .item.say_this
+                        .item.say
                             i.eye.icon
                             | #{view_count}
                             |views
@@ -105,10 +105,10 @@ template(name='suser_tags')
 template(name='suser_answers')
 template(name='suser_dashboard')
     .six.wide.column
-        .f12.say_this.pointer
+        .f12.say.pointer
             |!{about_me}
         if website_url
-            a.ui.basic.button.say_this(href=website_url target="_window")
+            a.ui.basic.button.say(href=website_url target="_window")
                 i.globe.icon
                 |#{website_url}
         .smallscroll
@@ -174,17 +174,17 @@ template(name='suser_dashboard')
             .ui.segment
                 a.ui.grey.header(href="/site/#{name}") #{name}
                     
-        .ui.grey.header.get_badges.say_this
+        .ui.grey.header.get_badges.say
             i.certificate.icon
             |#{user_badges.count} badges
         .ui.horizontal.list
-            .item.say_this 
+            .item.say 
                 +i n='medal2--v1' cl="#{currentUser.invert_class} ui avatar image"
                 |gold #{badge_counts.gold}
-            .item.say_this 
+            .item.say 
                 +i n='medal-second-place--v1' cl="#{currentUser.invert_class} ui avatar image"
                 |silver #{badge_counts.silver}
-            .item.say_this
+            .item.say
                 +i n='medal2-third-place--v1' cl="#{currentUser.invert_class} ui avatar image"
                 |bronze #{badge_counts.bronze}
         // .ui.list.smallscroll
@@ -225,7 +225,7 @@ template(name='suser_comments')
 
                             
 template(name='answer_item')
-    span.say_this #{score}: !{body}
+    span.say #{score}: !{body}
     // hi#{answer_question.title}
     |#{site}
     if in_dev
@@ -235,9 +235,11 @@ template(name='answer_item')
     
     
 template(name='user_comment_item')
+    .ui.button(href="/site/#{site}/q/#{question_id}")
+        |#{post_type}
     .ui.horizontal.list
         with reply_to_user
-            a.ui.small.header.item(href="/site/#{../site}/user/#{user_id}")
+            a.ui.small.header.say.item(href="/site/#{../site}/user/#{user_id}")
                 img.ui.avatar.image(src=profile_image)
                 |!{display_name}
                 small #{reputation}
@@ -245,14 +247,14 @@ template(name='user_comment_item')
 
     .ui.grey.inline.header(title='score') #{score}
     if creation_date
-        .ui.basic.label
+        .ui.basic.say.label
             |added {{ufrom creation_date}}
     if last_access_date
-        .ui.basic.label
+        .ui.basic.say.label
             |accessed {{ufrom last_access_date}}
     if last_activity_date
         |active {{ufrom last_activity_date}}
-    .ui.small.header.say_this(class=post_header_class) !{body}
+    .ui.small.header.say(class=post_header_class) !{body}
     // |#{site}
     if in_dev
         +print_this
@@ -263,30 +265,30 @@ template(name='user_comment_item')
             i.dna.icon
     each tags
         +flat_tag_selector
-        // .ui.tertiary.small.button.say_this #{this}
+        // .ui.tertiary.small.button.say #{this}
     +doc_emotion  
     
     
     
 template(name='user_question_item')
     .ui.item
-        a.ui.header.zoomer.say_this(href="/site/#{site}/doc/#{_id}" class=post_header_class)
+        a.ui.header.zoomer.say(href="/site/#{site}/doc/#{_id}" class=post_header_class)
             strong #{score}:
             |!{title}
         |!{about_me}
         .description
             if skv_is 'view_detail' true
                 each tags 
-                    .ui.tiny.basic.circular.tertiary.button.say_this #{this}
+                    .ui.tiny.basic.circular.tertiary.button.say #{this}
             +doc_emotion_small    
-            span.say_this(title="#{view_count} views")
+            span.say(title="#{view_count} views")
                 i.grey.eye.icon
                 |#{view_count}
-            span.say_this(title="#{answer_count} answers")
+            span.say(title="#{answer_count} answers")
                 i.grey.reply.icon
                 |#{answer_count}
             if creation_date
-                span.say_this(title="created {{ufrom creation_date}}")
+                span.say(title="created {{ufrom creation_date}}")
                     i.grey.clock.icon
                     |{{ufrom creation_date}}
             if last_modified_date
