--- a/client/tag.jade
+++ b/client/tag.jade
@@ -69,7 +69,7 @@ template(name='stack_tag')
                             img.ui.invert.mini.inline.image(src=watson.metadata.image)    
                         | #{site}
                     with owner
-                        a.ui.basic.segment.zoomer.pointer.say_this(href="/site/#{current_doc.site}/user/#{user_id}")
+                        a.ui.basic.segment.zoomer.pointer.say(href="/site/#{current_doc.site}/user/#{user_id}")
                             img.ui.rounded.image(src=profile_image)
                             .ui.header #{display_name}
                                 small #{reputation}
@@ -88,7 +88,7 @@ template(name='stack_tag')
                             i.large.brain.icon
                             |analyze
                     each tags 
-                        .ui.basic.pointer.tertiary.button.add_stack_tag.say_this.zoomer #{this}
+                        .ui.basic.pointer.tertiary.button.add_stack_tag.say.zoomer #{this}
                     a.ui.icon.button(href=link target='_window' title=link)
                         // |#{link}
                         i.external.large.icon
@@ -126,7 +126,7 @@ template(name='stack_tag')
                     
                     if skv_is 'stack_section' 'main'
                         .ui.basic.segment
-                            .f11.say_this.zoomer !{body}
+                            .f11.say.zoomer !{body}
                         .ui.small.grey.header.get_question_comments
                             i.chat.outline.icon
                             // |comments
@@ -136,11 +136,11 @@ template(name='stack_tag')
                                     .ui.green.label.zoomer
                                         |accepted
                                 // div(class=currentUser.invert_class)
-                                .f11.say_this.zoomer !{body}
+                                .f11.say.zoomer !{body}
                                 with owner
                                     .ui.divider
                                     i.chat.icon
-                                    a.ui.inline.header.say_this.zoomer(href="/site/#{current_doc.site}/user/#{user_id}")
+                                    a.ui.inline.header.say.zoomer(href="/site/#{current_doc.site}/user/#{user_id}")
                                         img.ui.avatar.invert.image(src=profile_image)
                                         |!{display_name}
                                         |#{reputation}
@@ -160,7 +160,7 @@ template(name='stack_tag')
                                     .ui.green.corner.attached.label.zoomer
                                         i.checkmark.icon
                                 // div(class=currentUser.invert_class)
-                                .f11.say_this.zoomer !{body}
+                                .f11.say.zoomer !{body}
                                 .ui.divider
                                 .ui.horizontal.list
                                     .item 
@@ -175,7 +175,7 @@ template(name='stack_tag')
     
                                 with owner
                                     div
-                                    a.ui.header.say_this.zoomer(href="/site/#{current_doc.site}/user/#{user_id}")
+                                    a.ui.header.say.zoomer(href="/site/#{current_doc.site}/user/#{user_id}")
                                         img.ui.avatar.invert.image(src=profile_image)
                                         |!{display_name}
                                     |#{reputation}
