--- a/client/alpha.jade
+++ b/client/alpha.jade
@@ -4,11 +4,11 @@ template(name='alpha')
         // i.large.brain.icon
         // | wolfram alpha
     // unless viewing_alpha
-    each alphas
-        with response.queryresult
-            each split_datatypes
-                .ui.button.basic.compact.buton.select_datatype
-                    |#{this}
+    // each alphas
+    //     with response.queryresult
+    //         each split_datatypes
+    //             .ui.button.basic.compact.buton.select_datatype
+    //                 |#{this}
         
         // if viewing_alpha
     if skv_is 'loading_alpha' true
@@ -21,9 +21,9 @@ template(name='alpha')
             if response.queryresult
                 with response.queryresult
                     // .ui.inline.header #{datatypes}
-                    each split_datatypes
-                        .ui.button.basic.compact.buton.select_datatype
-                            |#{this}
+                    // each split_datatypes
+                    //     .ui.button.basic.compact.buton.select_datatype
+                    //         |#{this}
                     // .ui.list
                     //     .item success: #{success}
                     //     .item error: #{error}
@@ -44,24 +44,24 @@ template(name='alpha')
                         // .item related: #{related}
                         // .item version: #{version}
                     each pods
-                        div
-                        // .ui.small.inline.middle.aligned.header.middled #{title}
-                        .ui.small.inline.header #{title}
-                        div
-                        // .item #{scanner}
-                        // .item id #{id}
-                        // .item position #{position}
-                        // .item error #{error}
-                        // .item numsubpods #{numsubpods}
-                        // .item subpods
-                        // .ui.list
-                        each subpods
+                        span.say
+                            // .ui.small.inline.middle.aligned.header.middled #{title}
                             .ui.small.inline.header #{title}
-                            img.ui.zoomer.pointer.image.invert.alphatemp(src=img.src)
-                            // .item.alphatemp
-                            // |#{plaintext}
-                            // .item title: #{title}
-                            // .item primary: #{primary}
+                            div
+                            // .item #{scanner}
+                            // .item id #{id}
+                            // .item position #{position}
+                            // .item error #{error}
+                            // .item numsubpods #{numsubpods}
+                            // .item subpods
+                            // .ui.list
+                            each subpods
+                                .ui.small.inline.header #{title}
+                                img.ui.zoomer.pointer.image.invert.alphatemp(src=img.src)
+                                // .item.alphatemp
+                                span.say #{plaintext}
+                                // .item title: #{title}
+                                // .item primary: #{primary}
                         // each tags
                         //     .ui.label #{this}
                         // .alphatemp voice: #{voice}
